--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div id="Hobbies">
 			
 			<h3>Hobbies/Goals</h3>
-			<p>I am currently enrolled in devcodecamp trying to become a better programmer.  I enjoy golfing on the weekends and hanging out with my friends. </p>
+			<p>I am currently enrolled in devcodecamp trying to become a better programmer.  I enjoy golfing on the weekends and hanging out with my friends.  I am a Hoosier, Badger, Packer, and Brewers fan. </p>
 			
 			</div>
 		</div>
