--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div id="Biography">
 			
 			<h3> Biography </h3>
-			<p>My name is Chris Kitz.  I am a finance and accounting graduate from Indiana University.</p>
+			<p>My name is Chris Kitz.  I am a finance and accounting graduate from Indiana University.  I went to Arrowhead High School and played Varisty soccer.  At Indiana University I played club soccer and rushed Lambda Chi Alpha fraternity.  I am currently and almuni of the fraternity and enjoy visiting my brothers during Homecoming and other events.  I currently work in Business Development at U.S. Bancorp Fund Services.  I am taking coding class because it is something I enjoy and am working on a startup company called LikeMinds, Inc. with a few of my friends.  I also like the lifestyle that comes with this career and the ability to be creative and build something of your own.</p>
 			
 			</div>
 		</div>
@@ -74,8 +74,8 @@
 		<div class="four columns">
 			<div id="Hobbies">
 			
-			<h3>Hobbies/Goals</h3>
-			<p>I am currently enrolled in devcodecamp trying to become a better programmer.  I enjoy golfing on the weekends and hanging out with my friends.  I am a Hoosier, Badger, Packer, and Brewers fan. </p>
+			<h3>Hobbies</h3>
+			<p>I am currently enrolled in devcodecamp trying to become a better programmer.  I enjoy golfing on the weekends on the few days that it is warm in Wisconsin.  I also have a good time hanging out with my friends on the weekends.  I am a Hoosier, Badger, Packer, and Brewers fan.  I also enjoy working on my startup company with my other two co-founders. </p>
 			
 			</div>
 		</div>
