--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 	<div class="row">
 		<div class="twelve columns">
 			<div id="AboutMe">
-			<h1> About Me. </h1>
+			<h1 align="center"> About Me. </h1>
 			
-			<img src="chris.png" alt="Chris" width=100 height=200>
+			<p style="text-align:center;"><img src="chris.png" alt="Chris"></p>
+			
+			</div>
+			
 			</div>
 		</div>
 	</div>
@@ -61,7 +64,7 @@
 	</div>
 	
 	<div class="row">
-		<div class="four columns">
+		<div class="twelve columns">
 		
 			<div id="Biography">
 			
@@ -70,8 +73,10 @@
 			
 			</div>
 		</div>
+	</div>
 		
-		<div class="four columns">
+	<div class="row">
+		<div class="twelve columns">
 			<div id="Hobbies">
 			
 			<h3>Hobbies</h3>
@@ -79,8 +84,10 @@
 			
 			</div>
 		</div>
+	</div>
 		
-		<div class="four columns">
+	<div class="row">
+		<div class="twelve columns">
 			<div id="Interests">
 			
 			<h3> Interests </h3>
